# versso

./: .gitignore  initial_pull.json  main.py  pyproject.toml  test-2.json
src/versso/: __init__.py  command.py  commands.py
src/versso/aws/account/: aws_account_object.py  factory.py  operation.py  payload.py  service.py
src/versso/aws/admin/: client.py  helper.py  regions.py
src/versso/config/: manifest.py
src/versso/demo/: describe_demo.py
src/versso/git/: __init__.py  local.py  project.py  remote.py
src/versso/git/builder/: _builder.py  builder.py
src/versso/git/local/: _payload.py  _service.py  factory.py  service.py
src/versso/initialize/: local_repo.py  project.py  project_init.py
src/versso/project/: remote.py  setup.py  template.py
src/versso/quicksight/: __init__.py
src/versso/quicksight/account/: _factory.py  _payload.py  _service.py
src/versso/quicksight/analysis/: _factory.py  _payload.py  _service.py  factory.py  service.py
src/versso/quicksight/builder/: _builder.py  builder.py
src/versso/quicksight/dashboard/: _factory.py  _payload.py  _service.py  factory.py  service.py
src/versso/quicksight/dataset/: _factory.py  _payload.py  _service.py  payload.py  service.py
src/versso/quicksight/folder/: _factory.py  _node.py  _payload.py  _resource.py  _resources.py  _service.py  factory.py  resources.py  service.py
src/versso/quicksight/interfaces/: _i_service.py
src/versso/quicksight/operations/: describe.py
src/versso/quicksight/setup/: context.py  remote.py  (+1 more)
src/versso/util/: command.py  datetime_encoder.py  helper.py
(+38 files in other folders)
