[project]
name = "versso"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.36",
    "boto3-stubs~=1.43.36",
    "botocore>=1.43.36",
    "click>=8.4.2",
    "gitpython>=3.1.50",
    "multipledispatch>=1.0.0",
    "mypy>=1.11",
    "pydantic>=2.13.4",
    "setuptools>=82.0.1",
]

[project.scripts]
versso = "versso.commands:cli"
